--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>uHost</title>
+    <link rel="shortcut icon" href="favicon.png">
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
 </head>
-<body>
-    <div class="cajaFlotante arriba">
-        Soy cabecera :3
-    </div>
-    <div class="cajaFlotante">
-        Soy contenido dentro de la caja!, estoy practicando mis habilidades en css y repasando mi conocimiento sobre la teoría de la caja.
-    </div>
-    <div class="cajaFlotante abajo">
-        <button class="aceptar">Aceptar</button>
-        <button class="cancelar">Cancelar</button>
-    </div>
 
+<body>
+    <main>
+        <section id="product-overview">
+            <h1>Get the freedom you deserve.</h1>
+        </section>
+        <section id="plans">
+            <h1 class="section-title">Choose Your Plan</h1>
+            <p>Make sure you get the most for your money!</p>
+        </section>
+    </main>
 </body>
+
 </html>
